Mark module as private to get rid of console warnings

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "protractor_sync",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "main": "index.js",
+  "private": true,
   "dependencies": {
   },
   "devDependencies": {
