--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "private": true,
   "dependencies": {
+    "mkdirp": "0.3.0"
   },
   "devDependencies": {
     "asyncblock": "2.1.24",
@@ -17,7 +18,7 @@
     "jasmine-reporters": "2.0.7",
     "jasmine-spec-reporter": "2.4.0",
     "load-grunt-tasks": "0.6.0",
-    "node-shared-typescript-defs": "git+ssh://git@stash.bbpd.io/cloud/node-shared-typescript-defs.git#v0.0.48",
+    "node-shared-typescript-defs": "git+ssh://git@stash.bbpd.io/cloud/node-shared-typescript-defs.git#v0.0.49",
     "typescript": "git+ssh://git@stash.bbpd.io/shared/typescript.git#1.4.3-bb"
   }
 }
