--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "grunt": "0.4.5",
     "grunt-contrib-clean": "0.4.0",
     "grunt-contrib-copy": "0.6.0",
-    "grunt-protractor-runner": "2.0.0",
+    "grunt-protractor-runner": "git+ssh://git@stash.bbpd.io/shared/grunt-protractor-runner.git#v3.1.0-bb",
     "grunt-shell": "0.7.0",
-    "grunt-ts": "4.1.0",
-    "grunt-tslint": "0.4.4",
+    "grunt-ts": "5.3.2",
+    "grunt-tslint": "3.0.3",
     "jasmine-reporters": "2.1.1",
     "jasmine-spec-reporter": "2.4.0",
     "load-grunt-tasks": "0.6.0",
     "node-shared-typescript-defs": "git+ssh://git@stash.bbpd.io/cloud/node-shared-typescript-defs.git#v0.0.58",
-    "typescript": "git+ssh://git@stash.bbpd.io/shared/typescript.git#1.4.3-bb"
+    "tslint": "3.5.0",
+    "typescript": "1.8.2"
   }
 }
