--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
   "name": "protractor_sync",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.js",
   "private": true,
   "dependencies": {
     "mkdirp": "0.3.0"
   },
   "devDependencies": {
-    "asyncblock": "2.2.8",
+    "asyncblock": "2.2.9",
     "grunt": "0.4.5",
-    "grunt-contrib-clean": "0.4.0",
-    "grunt-contrib-copy": "0.6.0",
+    "grunt-contrib-clean": "1.0.0",
+    "grunt-contrib-copy": "1.0.0",
     "grunt-protractor-runner": "2.0.0",
-    "grunt-shell": "0.7.0",
-    "grunt-ts": "4.1.0",
-    "grunt-tslint": "0.4.4",
+    "grunt-shell": "2.1.0",
+    "grunt-ts": "6.0.0-beta.3",
+    "grunt-tslint": "3.3.0",
     "jasmine-reporters": "2.1.1",
     "jasmine-spec-reporter": "2.4.0",
-    "load-grunt-tasks": "0.6.0",
+    "load-grunt-tasks": "3.5.2",
     "node-shared-typescript-defs": "git+ssh://git@stash.bbpd.io/cloud/node-shared-typescript-defs.git#v0.0.58",
-    "typescript": "git+ssh://git@stash.bbpd.io/shared/typescript.git#1.4.3-bb"
+    "protractor": "2.5.1",
+    "tslint": "3.15.1",
+    "typescript": "2.0.8",
+    "webdriver-manager": "10.2.8"
   }
 }
