Remove node-shared-typescript-defs and update deps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
-    "outDir": "build/develop"
+    "outDir": "build/develop",
+    "typeRoots" : ["./node_modules/@types", "./typings"]
   },
   "exclude": [
     "node_modules",
