--- a/package.json
+++ b/package.json
@@ -3,25 +3,25 @@
   "version": "1.0.2",
   "main": "index.js",
   "private": true,
-  "dependencies": {
-    "mkdirp": "0.3.0"
-  },
   "devDependencies": {
+    "@types/jasmine": "^2.5.47",
+    "@types/mkdirp": "^0.3.29",
+    "@types/node": "^6.0.69",
     "asyncblock": "2.2.9",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "1.0.0",
     "grunt-contrib-copy": "1.0.0",
     "grunt-protractor-runner": "2.0.0",
     "grunt-shell": "2.1.0",
-    "grunt-ts": "6.0.0-beta.3",
+    "grunt-ts": "6.0.0-beta.15",
     "grunt-tslint": "3.3.0",
     "jasmine-reporters": "2.1.1",
     "jasmine-spec-reporter": "2.4.0",
     "load-grunt-tasks": "3.5.2",
-    "node-shared-typescript-defs": "git+ssh://git@stash.bbpd.io/cloud/node-shared-typescript-defs.git#v0.0.58",
+    "mkdirp": "0.3.0",
     "protractor": "2.5.1",
     "tslint": "3.15.1",
-    "typescript": "2.0.8",
-    "webdriver-manager": "10.2.8"
+    "typescript": "2.3.0",
+    "webdriver-manager": "12.0.4"
   }
 }
