--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
-node_modules
-build
+# Shared between gitignore/npmignore
 
+yarn.lock
+npm-debug.log
+.idea/
+.vscode/
+*.DS_Store
+*.swp
+
+# Build artifacts
+
+node_modules/
+build/
 tmp
-.DS_Store
 .tscache
-/.idea/*
 *.tmp.txt
-
 .tscache
 .baseDir.ts
-
-npm-debug.log
-
-atlassian-ide-plugin.xml
