--- a/package.json
+++ b/package.json
@@ -1,13 +1,28 @@
 {
-  "name": "protractor_sync",
+  "name": "protractor-sync",
   "version": "1.0.4",
+  "description": "Synchronous, polled selectors and expectations in Protractor 2.x",
+  "homepage": "",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/blackboard/protractor-sync.git"
+  },
+  "author": "Chris Scribner <scriby@gmail.com>",
+  "license": "MIT",
   "main": "index.js",
-  "private": true,
+  "typings": "index.d.ts",
+  "engines": {
+    "node": ">=6.9.x"
+  },
+  "dependencies": {
+    "asyncblock": "~2.2.9",
+    "protractor": "~2.5.1",
+    "webdriver-manager": "^12.0.4"
+  },
   "devDependencies": {
     "@types/jasmine": "^2.5.47",
     "@types/mkdirp": "^0.3.29",
     "@types/node": "^6.0.69",
-    "asyncblock": "2.2.9",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "1.0.0",
     "grunt-contrib-copy": "1.0.0",
@@ -19,9 +34,7 @@
     "jasmine-spec-reporter": "2.4.0",
     "load-grunt-tasks": "3.5.2",
     "mkdirp": "0.3.0",
-    "protractor": "2.5.1",
     "tslint": "3.15.1",
-    "typescript": "2.3.0",
-    "webdriver-manager": "12.0.4"
+    "typescript": "2.3.0"
   }
 }
