--- a/package.json
+++ b/package.json
@@ -32,9 +32,13 @@
     "grunt-tslint": "3.3.0",
     "jasmine-reporters": "2.1.1",
     "jasmine-spec-reporter": "2.4.0",
+    "jquery": "^2.2.4",
     "load-grunt-tasks": "3.5.2",
     "mkdirp": "0.3.0",
     "tslint": "3.15.1",
     "typescript": "2.3.0"
+  },
+  "scripts": {
+    "prepublish": "grunt prepublish"
   }
 }
