--- a/package.json
+++ b/package.json
@@ -15,26 +15,26 @@
     "node": ">=6.9.x"
   },
   "dependencies": {
-    "asyncblock": "~2.2.9",
-    "protractor": "~2.5.1",
-    "webdriver-manager": "^12.0.4"
+    "asyncblock": "2.2.9",
+    "protractor": "5.1.2",
+    "webdriver-manager": "12.0.6"
   },
   "devDependencies": {
-    "@types/jasmine": "^2.5.47",
-    "@types/mkdirp": "^0.3.29",
-    "@types/node": "^6.0.69",
+    "@types/jasmine": "2.5.47",
+    "@types/mkdirp": "0.3.29",
+    "@types/node": "6.0.69",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "1.0.0",
     "grunt-contrib-copy": "1.0.0",
-    "grunt-protractor-runner": "2.0.0",
+    "grunt-protractor-runner": "5.0.0",
     "grunt-shell": "2.1.0",
     "grunt-ts": "6.0.0-beta.15",
     "grunt-tslint": "3.3.0",
     "husky": "0.13.3",
-    "in-publish": "^2.0.0",
+    "in-publish": "2.0.0",
     "jasmine-reporters": "2.1.1",
     "jasmine-spec-reporter": "2.4.0",
-    "jquery": "^2.2.4",
+    "jquery": "2.2.4",
     "load-grunt-tasks": "3.5.2",
     "mkdirp": "0.3.0",
     "tslint": "3.15.1",
