--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
+    "allowJs": true,
     "target": "es5",
     "module": "commonjs",
-    "declaration": true,
+    "declaration": false,
     "removeComments": false,
     "sourceMap": true,
     "noLib": false,
