--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
-    "allowJs": true,
     "target": "es5",
     "module": "commonjs",
-    "declaration": false,
+    "declaration": true,
     "removeComments": false,
     "sourceMap": true,
     "noLib": false,
