--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "author": "Chris Scribner <scriby@gmail.com>",
   "license": "MIT",
-  "main": "index.js",
-  "typings": "dist/protractor_sync.d.ts",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "engines": {
     "node": ">=6.9.x"
   },
