--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "protractor-sync",
-  "version": "2.0.0",
+  "version": "5.1.2",
   "description": "Synchronous, polled selectors and expectations in Protractor 2.x",
   "homepage": "",
   "repository": {
@@ -15,10 +15,10 @@
     "node": ">=6.9.x"
   },
   "dependencies": {
-    "asyncblock": "2.2.11",
-    "jquery": "2.2.4",
-    "protractor": "5.1.2",
-    "webdriver-manager": "12.0.6"
+    "asyncblock": "^2.2.11",
+    "jquery": "^2.2.4",
+    "protractor": "^5.1.2",
+    "webdriver-manager": "^12.0.6"
   },
   "devDependencies": {
     "@types/jasmine": "2.5.47",
