--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-shell": "2.1.0",
     "grunt-ts": "6.0.0-beta.15",
     "grunt-tslint": "5.0.1",
+    "heapdump": "^0.3.9",
     "husky": "0.13.3",
     "in-publish": "2.0.0",
     "jasmine-reporters": "2.1.1",
