--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/mkdirp": "0.3.29",
     "@types/node": "6.0.69",
     "grunt": "0.4.5",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "1.0.0",
     "grunt-contrib-copy": "1.0.0",
     "grunt-protractor-runner": "5.0.0",
