Setup xvfb for selenium

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,15 @@ jobs:
     steps:
       - checkout
 
+      - run:
+          name: Install System Deps
+          comment: apt-get install xvfb
+
+      - run:
+          name: Running X virtual framebuffer
+          command: Xvfb -ac :99 -screen 0 1280x1024x16 +extension RANDR > /dev/null 2>&1
+          background: true
+
       # Download and cache dependencies
       - restore_cache:
           keys:
@@ -33,5 +42,8 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      # run tests!
-      - run: npm test
+      - run:
+          name: Run Tests
+          command: |
+            export DISPLAY=:99
+            npm test
