--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,12 +27,10 @@ jobs:
           - v1-dependencies-
 
       #Always install the latest Chrome before we start our tests.
-      - run:
-          command: |
-            - curl -L -o google-chrome.deb https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-            - sudo dpkg -i google-chrome.deb
-            - sudo sed -i 's|HERE/chrome\"|HERE/chrome\" --disable-setuid-sandbox|g' /opt/google/chrome/google-chrome
-            - rm google-chrome.deb
+      - run: curl -L -o google-chrome.deb https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+      - run: sudo dpkg -i google-chrome.deb
+      - run: sudo sed -i 's|HERE/chrome\"|HERE/chrome\" --disable-setuid-sandbox|g' /opt/google/chrome/google-chrome
+      - run: rm google-chrome.deb
 
       - run: npm install
 
