update Chrome install package dependencies for things to work with latest Chrome

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,10 +27,15 @@ jobs:
           - v1-dependencies-
 
       #Always install the latest Chrome before we start our tests.
-      - run: curl -L -o google-chrome.deb https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-      - run: sudo dpkg -i google-chrome.deb
-      - run: sudo sed -i 's|HERE/chrome\"|HERE/chrome\" --disable-setuid-sandbox|g' /opt/google/chrome/google-chrome
-      - run: rm google-chrome.deb
+			- run: #STABLE
+  			name: Install Chromedriver latest version
+  			command: |
+    			sudo apt-get update
+    			sudo apt-get install lsb-release libappindicator3-1
+    			curl -L -o google-chrome.deb https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+    			sudo dpkg -i google-chrome.deb
+    			sudo sed -i 's|HERE/chrome"|HERE/chrome" --no-sandbox|g' /opt/google/chrome/google-chrome
+    			rm google-chrome.deb
 
       - run: npm install
 
