--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "@types/jasmine": "2.5.47",
     "@types/mkdirp": "0.3.29",
     "@types/node": "6.0.69",
-    "grunt": "0.4.5",
+    "grunt": "^1.0.4",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "1.0.0",
     "grunt-contrib-copy": "1.0.0",
     "grunt-protractor-runner": "5.0.0",
     "grunt-shell": "2.1.0",
-    "grunt-ts": "6.0.0-beta.15",
+    "grunt-ts": "^6.0.0-beta.22",
     "grunt-tslint": "5.0.1",
     "husky": "0.13.3",
     "in-publish": "2.0.0",
